[project]
name = "langgraph-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-google-community>=2.0.10",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
]
